WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
82352
Compiler warning when JIT is not enabled
https://bugs.webkit.org/show_bug.cgi?id=82352
Summary
Compiler warning when JIT is not enabled
Pratik Solanki
Reported
2012-03-27 10:06:01 PDT
I am seeing /Volumes/Data/psolanki/sources/webkit/Source/JavaScriptCore/runtime/JSFunction.cpp:62:156: error: unused parameter 'intrinsic' [-Werror,-Wunused-parameter] intrinsic is only used inside #if ENABLE(JIT).
Attachments
Patch
(1.55 KB, patch)
2012-03-27 10:14 PDT
,
Pratik Solanki
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Pratik Solanki
Comment 1
2012-03-27 10:14:52 PDT
Created
attachment 134091
[details]
Patch
WebKit Review Bot
Comment 2
2012-03-27 11:06:38 PDT
Comment on
attachment 134091
[details]
Patch Clearing flags on attachment: 134091 Committed
r112285
: <
http://trac.webkit.org/changeset/112285
>
WebKit Review Bot
Comment 3
2012-03-27 11:06:43 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug