Compiler warning when JIT is not enabled https://bugs.webkit.org/show_bug.cgi?id=82352

Reviewed by Filip Pizlo.

* runtime/JSFunction.cpp:
(JSC::JSFunction::create):


Canonical link: https://commits.webkit.org/99719@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@112285 268f45cc-cd09-0410-ab3c-d52691b4dbfc